# memereview

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.development.yml  docker-compose.yml  flake.nix  rust-toolchain  rustfmt.toml
.github/workflows/: docker.yml
entity/: Cargo.toml
entity/src/: files.rs  lib.rs  links.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220831_222057_files.rs  m20220904_180014_restriction.rs  m20220904_180657_users.rs  m20220904_181126_links.rs  m20220909_144004_submissions.rs
scripts/: generate-entity.sh
src/: bot.rs  database.rs  db.rs  entity.rs  implementations.rs  lib.rs  logger.rs  main.rs  models.rs  prelude.rs
src/bot/: commands.rs  embeds.rs  events.rs
src/bot/commands/: link.rs  ping.rs  register.rs
src/bot/events/: message.rs
src/db/: links.rs  users.rs
src/entity/: files.rs  links.rs  prelude.rs  sea_orm_active_enums.rs  submissions.rs  users.rs
src/extensions/: ctx.rs
src/implementations/: file_type.rs  restriction_type.rs
src/models/: parse_component_error.rs  parse_file_error.rs
src/services/: attachments.rs
