[package]
name = "memereview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.3"
once_cell = "1.13.1"
poise = "0.3.0"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.0"
tonic-build = "0.8.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
prost = "0.11.0"
chrono = "0.4.22"
futures = "0.3.13"

migration = { path = "migration" }

[build-dependencies]
tonic-build = "0.8.0"
