[package]
name = "memereview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
once_cell = "1.18.0"
poise = "0.5.6"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-build = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
prost = "0.12.1"
chrono = "0.4.31"
futures = "0.3.28"

migration = { path = "migration" }

[build-dependencies]
tonic-build = "0.10.2"
